# fyp

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_output.txt  client.wasm  desc.pb  greeter_client.cc  out.desc  test_wasm_app.c  test_wasm_app.wasm  test_wasm_app.wast
cmake/: CMakeCache.txt
cmake/absl/tmp/: absl-mkdirs.cmake
cmake_normal/: CMakeLists.txt
include/: host_utils.h  mangling_utils.h  native_impl.h  wasm_app.h
old_files/: CMakeLists copy.txt  CMakeLists.txt  CMakeListsWasm.txt  client_wasm.cc  helloworld.proto  host.cpp  server.wasm  server_wasm.cc  wasm_app.c
proto_messages/: generate.sh  message.options  message.proto
proto_messages/generated_nano/: message.pb.c
protobuf_wasm/: wasi-toolchain.cmake
protobuf_wasm/wasm_libraries/protobuf-build-lite/: CMakeLists.txt  protobuf_build.sh
scripts/: build.sh  build_host.sh  build_wasm.sh  generate_wasm_exports.py  run.sh  setup_proto.sh
src/: call_wasm_utils.cpp  host.cpp  host_utils.cpp  load_module.cpp  mangling_utils.cpp  native_impl.cpp
wasm/: CMakeLists.txt  a.out  native_impls.txt  protowasm_app.cpp  wasm_app.c  wasm_app.cpp
wasm_libraries/abseil-minimal/: CMakeLists.txt  abseil_build.sh
wasm_libraries/protobuf-build-lite/: CMakeLists.txt  protobuf_build.sh
wasm_libraries/protobuf-build-lite/src/google/protobuf/: arena.cc
wasm_libraries/protobuf-build-lite/stubs/google/protobuf/stubs/: mutex.h
wasm_libraries/protobuf-official/: protobuf-lite-build.sh
